@@ -1,12 +1,18 @@
 package fr.samlegamer.mcwmoddinglegacy;
 
 import fr.samlegamer.addonslib.client.APIRenderTypes;
+import fr.samlegamer.addonslib.data.McwBlocksIdBase;
 import fr.samlegamer.addonslib.data.ModType;
 import fr.samlegamer.addonslib.door.Doors;
+import fr.samlegamer.addonslib.generation.loot_tables.McwLootTables;
+import fr.samlegamer.addonslib.generation.tags.McwBlockTags;
+import fr.samlegamer.addonslib.generation.tags.McwItemTags;
 import fr.samlegamer.addonslib.path.Paths;
 import fr.samlegamer.addonslib.trapdoor.Trapdoors;
+import fr.samlegamer.addonslib.util.McwMod;
 import fr.samlegamer.addonslib.windows.Windows;
 import net.minecraft.client.renderer.RenderType;
+import net.minecraft.data.DataGenerator;
 import net.minecraft.world.item.CreativeModeTab;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -15,10 +21,12 @@ import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.SoundType;
 import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.minecraftforge.common.MinecraftForge;
+import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.fml.ModList;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
-import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
+import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
+import net.minecraftforge.forge.event.lifecycle.GatherDataEvent;
 import net.minecraftforge.registries.DeferredRegister;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -31,14 +39,12 @@ import fr.samlegamer.addonslib.roofs.Roofs;
 import fr.samlegamer.addonslib.stairs.Stairs;
 import fr.samlegamer.addonslib.tab.NewIconRandom;
 import fr.samlegamer.addonslib.tab.NewIconRandom.BlockType;
-
 import javax.annotation.Nonnull;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 @Mod(McwModdingLegacy.MODID)
-public class McwModdingLegacy
+public class McwModdingLegacy extends McwMod
 {
 	public static final String MODID = "mcwmoddinglegacy";
     private static final Logger LOGGER = LogManager.getLogger();
@@ -46,9 +52,9 @@ public class McwModdingLegacy
     private static final DeferredRegister<Block> block = Registration.blocks(MODID);
     private static final DeferredRegister<Item> item = Registration.items(MODID);
 
-    public static final List<String> wood_blue_skies = Arrays.asList("bsky_bluebright", "bsky_cherry", "bsky_dusk", "bsky_frostbright", "bsky_lunar", "bsky_maple", "bsky_starlit");
-    public static final List<String> wood_premium_wood = Arrays.asList("pwood_magic", "pwood_maple", "pwood_purple_heart", "pwood_silverbell", "pwood_tiger", "pwood_willow");
-    public static final List<String> wood_crystallized = Arrays.asList("bsky_crystallized");
+    public static final List<String> wood_blue_skies = List.of("bsky_bluebright", "bsky_cherry", "bsky_dusk", "bsky_frostbright", "bsky_lunar", "bsky_maple", "bsky_starlit");
+    public static final List<String> wood_premium_wood = List.of("pwood_magic", "pwood_maple", "pwood_purple_heart", "pwood_silverbell", "pwood_tiger", "pwood_willow");
+    public static final List<String> wood_crystallized = List.of("bsky_crystallized");
     
     public static final CreativeModeTab MCWMODDINGLEGACY_TAB = new CreativeModeTab(MODID + ".tab") {
 	    @Override
@@ -115,19 +121,65 @@ public class McwModdingLegacy
 		Trapdoors.setRegistrationWoodModLoaded(wood_premium_wood, block, item, MCWMODDINGLEGACY_TAB, "premium_wood");
 		Windows.setRegistrationWoodModLoaded(wood_premium_wood, block, item, MCWMODDINGLEGACY_TAB, "premium_wood");
 
-    	FMLJavaModLoadingContext.get().getModEventBus().addListener(this::client);
+    	bus().addListener(this::clientSetup);
+        bus().addListener(this::commonSetup);
+        bus().addListener(this::dataSetup);
         MinecraftForge.EVENT_BUS.register(MappingsFix.class);
     	LOGGER.info("Macaw's Modding Legacy Mod Finish !");
     }
-    
-    private void client(final FMLClientSetupEvent event)
-    {
-		APIRenderTypes.initAllWood(event, MODID, wood_blue_skies, Registration.getAllModTypeWood());
-		APIRenderTypes.initAllWood(event, MODID, wood_crystallized, RenderType.translucent(), ModType.BRIDGES, ModType.ROOFS);
-		APIRenderTypes.initAllWood(event, MODID, wood_premium_wood, Registration.getAllModTypeWood());
-		APIRenderTypes.initAllLeave(event, MODID, wood_blue_skies);
-		APIRenderTypes.initAllLeave(event, MODID, wood_crystallized, RenderType.translucent());
-		APIRenderTypes.initAllLeave(event, MODID, wood_premium_wood);
+
+    @Override
+    public void clientSetup(FMLClientSetupEvent event) {
+        APIRenderTypes.initAllWood(event, MODID, wood_blue_skies, Registration.getAllModTypeWood());
+        APIRenderTypes.initAllWood(event, MODID, wood_crystallized, RenderType.translucent(), ModType.BRIDGES, ModType.ROOFS);
+        APIRenderTypes.initAllWood(event, MODID, wood_premium_wood, Registration.getAllModTypeWood());
+        APIRenderTypes.initAllLeave(event, MODID, wood_blue_skies);
+        APIRenderTypes.initAllLeave(event, MODID, wood_crystallized, RenderType.translucent());
+        APIRenderTypes.initAllLeave(event, MODID, wood_premium_wood);
+    }
+
+    @Override
+    public void commonSetup(FMLCommonSetupEvent event) {
+        event.enqueueWork(() -> {
+            McwLootTables.addBlockAllWood(MODID, wood_blue_skies);
+            McwLootTables.addBlockAllWood(MODID, wood_premium_wood);
+
+            McwLootTables.addBlock(MODID, wood_crystallized, McwBlocksIdBase.BRIDGES_WOOD_BLOCKS);
+            McwLootTables.addBlock(MODID, wood_crystallized, McwBlocksIdBase.ROOFS_WOOD_BLOCKS);
+
+            McwLootTables.addBlockHedges(MODID, wood_blue_skies);
+            McwLootTables.addBlockHedges(MODID, wood_crystallized);
+            McwLootTables.addBlockHedges(MODID, wood_premium_wood);
+        });
+    }
+
+    @Override
+    public void dataSetup(GatherDataEvent gatherDataEvent) {
+        DataGenerator generator = gatherDataEvent.getGenerator();
+        ExistingFileHelper existingFileHelper = gatherDataEvent.getExistingFileHelper();
+
+        McwBlockTags mcwBlockTags = new McwBlockTags(generator, MODID, existingFileHelper) {
+            @Override
+            protected void addTags() {
+                addAllMcwTags(MODID, wood_blue_skies, wood_blue_skies);
+                addAllMcwTags(MODID, wood_premium_wood, wood_premium_wood);
+
+                mcwRoofsTags(MODID, wood_crystallized, List.of());
+                mcwBridgesTagsWood(MODID, wood_crystallized);
+                mcwFencesTags(MODID, List.of(), wood_crystallized, List.of());
+            }
+        };
+        generator.addProvider(new Recipes(generator));
+        generator.addProvider(mcwBlockTags);
+        generator.addProvider(new McwItemTags(generator, mcwBlockTags, MODID, existingFileHelper) {
+            @Override
+            protected void addTags() {
+                addAllMcwTags(MODID, wood_blue_skies, wood_blue_skies);
+                addAllMcwTags(MODID, wood_premium_wood, wood_premium_wood);
+
+                mcwFencesTags(MODID, List.of(), wood_crystallized, List.of());
+            }
+        });
     }
     
     private static String randomNaming()
